--- a/src/book/1.md
+++ b/src/book/1.md
@@ -1,3 +1,23 @@
 ## 单干：成为超级个体的49个关键动作
 
 觉醒就是，开始有经营自己的意识，认识到自己是世界独一无二的个体，而不是流水线上无差别的劳动力，单纯的被作为工具被消耗和利用
+
+## 稀缺
+当你的能力朝着市场需求的方向持续生长时，你终将走向稀缺。
+
+如何提升稀缺性？
+1. 效果：知识不稀缺，效果才稀缺
+
+知识是不需要付费的，效果才需要付费。千万不要直接出售知识，要始终瞄准效果。你不是在写一本书，而是通过文字让别人少走弯路。你不是在讲一堂课，而是用课程的形式提高学员的能力水平。
+
+2. 圈层：没有绝对的稀缺，只有相对的稀缺
+3. 确定性：在高度不确定的环境中，确定性就是稀缺。品牌，口碑、成功经验
+
+## 对标复刻
+
+任正非说过：以世界上最好的公司为标杆，先僵化，后优化，再固化。
+
+你们行业做的最好的是谁，他是怎么做到的？
+
+## 做产品
+先做咨询，再做产品。做咨询就是调动所有能力和智慧帮用户找到解决方案，等问题解决了，再回过头复盘来时路：找到知易行难的事情，将其设计成定制化服务，找到知难行易的事情，将其设计成标准化产品。
