--- a/src/engineer/4.nvm.md
+++ b/src/engineer/4.nvm.md
@@ -34,5 +34,5 @@ https://blog.csdn.net/QQ395879676/article/details/127638422
 常见问题处理
 1. npm安装报错
 清理下npm缓存：npm cache clean --force
-指定npm源：npm install --registry https://registry.npm.taobao.org
+指定npm源：npm install --registry https://registry.npmmirror.com
 npm install --registry=https://registry-node.aliyun.com/org/1987849122053494/registry/btclass/
