--- a/src/vscode/2.md
+++ b/src/vscode/2.md
@@ -3,7 +3,7 @@
 - 要实现上一个文件与当前文件 2 个文件来回切换：`Ctrl + tab`
 - 要实现所有文件切换时，可以按住`Ctrl`键不放 + 再按`Tab`键选择文件实现
 - 也可以使用`Alt+数字键`来实现文件的切换，比如`Alt+1`切换到第一个文件
-2. 切换编辑器: `Ctrl+数字键
+2. 切换编辑器: `Ctrl+数字键`
 
 ## 重新加载窗口
 
