--- a/src/vscode/2.md
+++ b/src/vscode/2.md
@@ -5,6 +5,19 @@
 - 也可以使用`Alt+数字键`来实现文件的切换，比如`Alt+1`切换到第一个文件
 2. 切换编辑器: `Ctrl+数字键`
 
+
+command shift L 选中所有的相同单词
+command shfit F 全局搜索
+command b 关闭侧边栏
+Command ⬆️ 跳转到文件顶部
+Command ⬇️ 跳转到文件底部
+
+1.折叠所有代码 (按住ctrl 分别点击k和0)
+ctrl+k,ctrl+0
+
+2.展开所有代码 (按住ctrl 分别点击k和j)
+ctrl+k,ctrl+j
+
 ## 重新加载窗口
 
 Ctrl + Shift + P，输入 Reload Window，按回车
