--- a/src/tools/1.md
+++ b/src/tools/1.md
@@ -5,3 +5,168 @@ eg: 请求这个地址获得一张 200 * 300 的随机图片：https://picsum.ph
 ```bash
 img*30[src="https://picsum.photos/200/300?$"]
 ```
+
+## 检测视频是否是H264格式
+
+使用三方包 [mediainfo.js](https://www.npmjs.com/package/mediainfo.js)，此包是`C++`编写的。官方文档链接：[https://mediainfo.js.org/docs/getting-started/installation/](https://mediainfo.js.org/docs/getting-started/installation/)
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<div>
+    <input type="file" id="inputFile" accept="video/*">
+</div>
+<script type="text/javascript" src="https://unpkg.com/mediainfo.js@0.1.4/dist/mediainfo.min.js"></script>
+<script>
+    //主要时获取视频编码，有些浏览器不支持某些视频编码
+    function getFileEncodeInfo(file) {
+        return new Promise((fileEncodeResolve, fileEncodeReject) => {
+            //format结果值的格式（选择：object，JSON，XML，HTML或text）
+            MediaInfo({ format: 'object' }, (mediainfo) => {
+                const getSize = () => file.size
+                const readChunk = (chunkSize, offset) =>
+                    new Promise((resolve, reject) => {
+                        const reader = new FileReader()
+                        reader.onload = (event) => {
+                            if (event.target.error) {
+                                reject(event.target.error)
+                            }
+                            resolve(new Uint8Array(event.target.result))
+                        }
+                        reader.readAsArrayBuffer(file.slice(offset, offset + chunkSize))
+                    })
+                mediainfo.analyzeData(getSize, readChunk).then((result) => {
+                    fileEncodeResolve({
+                        encodeFormat:result.media.track[1].Format,
+                        result
+                    });
+                }).catch((error) => {
+                    fileEncodeReject(error);
+                })
+            })
+        })
+    }
+ 
+    document.getElementById('inputFile').addEventListener('change', async (e) => {
+        const file = e.target.files[0]
+        try {
+            const fileEncodeInfo = await getFileEncodeInfo(file);
+            //AVC各大浏览器都支持
+            if(fileEncodeInfo.encodeFormat!=='AVC'){
+                console.log('目前支持AVC(h264)视频编码格式')
+            }else{
+                console.log('视频编码格式正常')
+            }
+        }catch (error) {
+            console.log('获取视频编码信息失败：',error)
+        }
+    })
+</script>
+</body>
+</html>
+```
+
+## 实现一个loading效果
+
+`html`部分：
+```html
+<div class="container">
+  <div class="dot-ellipsis">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+  </div>
+</div>
+```
+
+`css`部分：
+```css
+.container {
+  text-align: center;
+}
+
+.dot-ellipsis {
+  margin: 200px auto;
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.dot-ellipsis .dot {
+  position: absolute;
+  top: 27px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background: #ccc;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.dot-ellipsis .dot:nth-child(1) {
+  left: 6px;
+  animation: dot-ellipsis1 0.6s infinite;
+}
+.dot-ellipsis .dot:nth-child(2) {
+  left: 6px;
+  animation: dot-ellipsis2 0.6s infinite;
+}
+.dot-ellipsis .dot:nth-child(3) {
+  left: 26px;
+  animation: dot-ellipsis2 0.6s infinite;
+}
+.dot-ellipsis .dot:nth-child(4) {
+  left: 45px;
+  animation: dot-ellipsis3 0.6s infinite;
+}
+@keyframes dot-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes dot-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes dot-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(19px, 0);
+  }
+}
+```
+
+## 全角字符转半角
+背景：用户在输入框输入全角字符时，用了正则去校验输入的是否为数字，校验正则为`/^\d+(.\d+)?$/`，但如果用户用的是输入法的全角模式进行输入，即使是数字，也会校验不通过，所以需要把用户输入的全角字符转成半角字符。
+
+```js
+// 全角字符转半角字符
+function transformHalfAngle(str) { 
+  let result = ""; 
+  for(let i = 0;i < str.length;i++){ 
+      if (str.charCodeAt(i) === 12288){
+          result += String.fromCharCode(str.charCodeAt(i) - 12256);
+          continue;
+      }
+      if(str.charCodeAt(i) > 65280 && str.charCodeAt(i) < 65375){ 
+          result += String.fromCharCode(str.charCodeAt(i) - 65248); 
+      } 
+      else{ 
+          result += String.fromCharCode(str.charCodeAt(i)); 
+      } 
+  } 
+  return result;
+}
+```
