--- a/src/collect/framework/design/1.聊聊架构.md
+++ b/src/collect/framework/design/1.聊聊架构.md
@@ -5,3 +5,6 @@
 - 架构三部曲：掌握原理 -> 独立思考 -> 总结反思
 - 深度剖析优秀开源项目，由表及里，由浅入深
 - 视角切换：多切换到架构师视角，从全局思考问题
+
+## 什么是系统
+系统是元素和结构的组合，把一系列无序的元素、通过一定的结构组合起来，使它们具备整体性。
