--- a/src/collect/server/001.md
+++ b/src/collect/server/001.md
@@ -103,7 +103,7 @@ services:
 
 ### 命令
 
-- 构建容器 docker-compose build <service-name>
+- 构建容器 `docker-compose build <service-name>`
 - 启动所有服务器 docker-compose up -d，后台启动
 - 停止所有服务 docker-compose down
 - 查看服务（查看 docker-compose中列举的服务） docker-compose ps 
