--- a/src/collect/browser/002.md
+++ b/src/collect/browser/002.md
@@ -52,7 +52,7 @@ DNS解析过程：
 
 由于TCP是面向连接的通信协议，所以在数据传输之前需要建立好客户端与服务器之间的连接，也就是tcp**三次握手**：
 
-<img :src="$withBase('/browser/三次握手.png')" alt="图片加载失败" title="三次握手">
+![图片加载失败](../../assets/images/browser/三次握手.png)
 
 （1）客户端生成一个随机数seq，假设其值为t，并将标志位SYN设为1，将这些数据打包发给服务端后，客户端进入等待服务器确认的状态。
 
@@ -63,7 +63,7 @@ DNS解析过程：
 
 当用户关闭标签页或请求完成后，TCP连接会进行**四次挥手**：
 
-<img :src="$withBase('/browser/四次挥手.png')" alt="图片加载失败" title="四次挥手">
+![图片加载失败](../../assets/images//browser/四次挥手.png)
 
 （1）由客户端向服务器发送FIN=M的指令，随后进入等待请求状态**FIN_WAIT_1**，表明客户端已经没有向服务器发送的数据，但若服务器此时还有为完成的数据传递，可继续传递数据。
 
