--- a/src/collect/design_pattern/003.md
+++ b/src/collect/design_pattern/003.md
@@ -14,7 +14,7 @@ sidebar: "auto"
 比如找明星演出，必须联系他的经纪人。和经纪人谈妥之后，再把合同让明星来签。
 
 <div class="img-box">
-    <img :src="$withBase('/design_pattern/使用代理模式.svg')" alt="图片加载失败">
+    ![图片加载失败](../../assets/images/design_pattern/使用代理模式.svg)
 </div>
 
 ## 小明追小美的故事
