--- a/src/collect/framework/react/002.md
+++ b/src/collect/framework/react/002.md
@@ -57,11 +57,11 @@ React不仅可以跑在浏览器上，还可以跑在在原生的手机上（Rea
 ## React更新机制
 React渲染流程：
 
-<img :src="$withBase('/react/react渲染流程.svg')" alt="图片加载失败">
+![图片加载失败](../../../assets/images/react/react渲染流程.svg)
 
 React的更新流程：
 
-<img :src="$withBase('/react/react更新流程.svg')" alt="图片加载失败">
+![图片加载失败](../../../assets/images/react/react更新流程.svg)
 
 
 React中的diff:
