--- a/src/collect/javascript/js-base/003.md
+++ b/src/collect/javascript/js-base/003.md
@@ -22,7 +22,7 @@ sidebar: "auto"
 2. 解析/语法分析（Parsing）
 
 这个过程是将词法单元流（数组）转换成一个由元素逐级嵌套所组成的描述程序语法结构的树，也就是“**抽象语法树（Abstract Syntax Tree，AST）**”。var a = 1;的抽象语法树中可能会有一个叫做VariableDeclaration的顶级节点，接下来是一个叫做Identifier的name为a的子节点，以及一个值为1的NumericLiteral子节点。
-<img :src="$withBase('/js/ast.png')" alt="图片加载失败">
+![图片加载失败](../../../assets/images/js/ast.png)
 
 3. 代码生成
 
