--- a/src/collect/net/002.md
+++ b/src/collect/net/002.md
@@ -31,10 +31,10 @@ HTTP/1.1 200 OK
 
 ## 头部字段
 请求头 = 请求行 + 头部字段集合，如下图：
-<img :src="$withBase('/net/HTTP请求头.webp')" alt="图片加载失败" title="HTTP请求头">
+![图片加载失败](../../assets/images/net/HTTP请求头.webp)
 
 响应头 = 响应行 + 头部字段集合，如下图：
-<img :src="$withBase('/net/HTTP响应头.webp')" alt="图片加载失败" title="HTTP响应头">
+![图片加载失败](../../assets/images/net/HTTP响应头.webp)
 
 头部字段是key-value的形式，key和value之间用“：”分隔，最后用CRLF换行表示字段结束。HTTP头字段比较灵活，可以添加自定义头，但需要注意：
 1. 字段名不区分大小写
