--- a/src/collect/v8/003.md
+++ b/src/collect/v8/003.md
@@ -63,7 +63,7 @@ b
 */
 ```
 为了提高存储和访问性能，v8采用了两个**线性结构**来分别保存排序属性和常规属性，具体结构如下图所示：
-<img :src="$withBase('/js/v8/v8内部的对象构造.svg')" alt="图片加载失败">
+![图片加载失败](../../assets/images/js/v8/v8内部的对象构造.svg)
 
 如果执行遍历操作，v8会先从elements属性中按照顺序读取所有的元素，然后再在properties属性中读取所有的元素。
 
@@ -75,7 +75,7 @@ b
 在对象的常规属性很少的时候，v8会把部分常规属性直接存储到对象本身，提高查询效率，我们把这些属性称为**对象内属性（in object properties）**。如下图所示：
 
 <div class="img-box">
-  <img :src="$withBase('/js/v8/对象内属性.svg')" alt="图片加载失败">
+  ![图片加载失败](../../assets/images/js/v8/对象内属性.svg)
 </div>
 
 对象内属性的数量是固定的，最多10个，如果添加的属性超过了对象分配的空间，则会将它们保存在常规属性中。常规属性虽然多了一层中间层，但扩容比较方便。
