--- a/src/collect/node/001.md
+++ b/src/collect/node/001.md
@@ -1,12 +1,10 @@
----
-title: 001 Node简介
-date: 2021-06-17
-categories:
-  - Node
-tags:
-  - Node
-sidebar: "auto"
----
+# Node简介
+
+## Nodejs解决了什么问题？
+1. 硬件成本问题：在`Java`、`PHP`、`.NET`等服务端语言中，它们会对每一个请求创建一个线程，每个线程要消耗 2MB 的内存，服务器的硬件成本会随着并发量的增加而增加，
+2. 资源共享问题：一个用户的不同请求，会被不同的服务器处理，所以需要在服务器之间共享资源。
+
+Nodejs修改了客户端和服务器的连接方式，它不会为每个请求创建一个线程，而是将它转化为一个内部处理的事件，因此，它可以处理成千上万的并发请求，而系统资源消耗却很低。
 
 ## 为什么选择JavaScript成为Node的实现语言？
 Node的作者Ryan Dahl是一名资深的C/C++程序员，设计高性能服务器是它工作内容的重点，而设计高性能服务器有两个要点：一个是**事件驱动**，另一个是**非阻塞I/O**，Ryan Dahl对一些语言进行了评估：
