--- a/src/note/develop/1.image.md
+++ b/src/note/develop/1.image.md
@@ -101,7 +101,7 @@ function copyImage(img) {
 }
 ```
 
-这里如果出现`Uncaught SecurityError: Failed to execute 'toBlob' on 'HTMLCanvasElement'`报错，需要在`img`标签上增加`crossOrigin`属性。
+这里如果出现`Uncaught SecurityError: Failed to execute 'toBlob' on 'HTMLCanvasElement'`报错，可能是你使用的图片跨域了，首先确保图片资源服务器允许跨域使用，然后需要在`img`标签上增加`crossOrigin`属性。
 
 ```html
 <img src="xxx" crossOrigin/>
