--- a/src/note/develop/1.image.md
+++ b/src/note/develop/1.image.md
@@ -12,14 +12,13 @@
 ## 一、前置知识：如何实现复制？
 既然要复制图片，那我们先看看前端是怎么实现复制功能的。
 
-一般来说，实现复制有3种方案：
+一般来说，实现复制有2种方案：
 1. `document.execCommand()`方法；
 2. `Clipboard API`；
-3. `copy` 事件和 `paste` 事件。
 
 > **复制功能的安全限制**：复制脚本需要放在监听事件回调里面进行执行，由用户触发（比如点击事件），如果直接执行脚本，浏览器可能会报错。
 
-下面分别介绍下这3个方法：
+下面分别介绍下这2个方法：
 
 ### 1. document.execCommand()
 使用方法：
@@ -78,14 +77,19 @@ console.log(navigator.clipboard);
 
 ## 二、实现复制图片
 
-图片形式：
-1. 远程URL
-2. base64 URL
+一般图片是通过两种形式加载：
+1. 远程URL，最常见的是`cdn` 地址，比如`https://cdn.xxx.cn/example.png`，
+2. base64 URL，一些体积较小的图片通常会打包成`base64`字符串，以减少网站资源请求数量，比如`data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA...`。
 
 不管是什么图片形式的图片，我们最终目的都是需要将它转化为`blob`对象，然后通过`navigator.clipboard.write()`方法写入到剪贴板。
 
 
-图片已经渲染出来，可以通过 `canvas` 将图片复制到剪贴板。
+比如这样一张图片：
+```html
+<img src="https://xxx" alt="加载失败" id="img"/>
+```
+
+我们可以通过 `canvas` 将图片复制到剪贴板，具体代码如下：
 ```js
 function copyImage(img) {
   const canvas = document.createElement('canvas')
@@ -99,6 +103,9 @@ function copyImage(img) {
     navigator.clipboard.write([clipboardItem])
   })
 }
+img.addEventListener("click", () => {
+  copyImage(img);
+});
 ```
 
 这里如果出现`Uncaught SecurityError: Failed to execute 'toBlob' on 'HTMLCanvasElement'`报错，可能是你使用的图片跨域了，首先确保图片资源服务器允许跨域使用，然后需要在`img`标签上增加`crossOrigin`属性。
@@ -107,7 +114,9 @@ function copyImage(img) {
 <img src="xxx" crossOrigin/>
 ```
 
-提供的是一个链接，需要先把链接转成图片，再进行复制。
+当然实际业务中可能提供的只是一个图片点击后的跳转链接，需要先把链接转成一张二维码图片，再进行复制。
+
+这里使用第三方库`qrcode`，把链接转化成二维码。
 ```js
 import QRcode from 'qrcode';
 
@@ -125,7 +134,9 @@ async function copyImage(url) {
 }
 ```
 
-## base64图片转成blob方法
+我们这里通过`QRcode.toDataURL()`方法，拿到二维码的`base64`图片url，然后通过原生的`fetch`方法，把二维码图片转化成`blob`对象，最后以`ClipboardItem`形式写入到`clipboard`中。
+
+除了`fetch`以外，还可以通过如下方式将`base64`图片转化为`blob`对象，具体代码如下：
 ```js
 function dataURIToBlob(dataURI) {
     const base64Index = dataURI.indexOf(';base64,') + 8;
@@ -143,7 +154,7 @@ function dataURIToBlob(dataURI) {
 }
 ```
 
-## clipboard兼容性
+## 三、clipboard兼容性问题
 
 在一些浏览器上可能不支持`Clipboard API`，所以需要通过`navigator.clipboard`的值是否为`undefined`判断此浏览器是否支持复制功能，如果不支持`Clipboard API`的话，就无法复制图片了，这时候可以使用`document.execCommand('copy')`来复制文本，或者直接给用户提示该浏览器不支持复制图片。
 
@@ -160,7 +171,8 @@ function copyToClipboard(text) {
 
 function copyImage() {
   if (navigator.clipboard) {
-      const clipboardItem = new ClipboardItem({ 'image/png': this.imgBlob });
+     //...
+      const clipboardItem = new ClipboardItem({ 'image/png': imgBlob });
       navigator.clipboard.write([clipboardItem]);
       console.log('复制成功');
   } else {
@@ -168,8 +180,11 @@ function copyImage() {
   }
 }
 ```
+## 四、其它功能
 
-## 预览图片
+### 4.1 预览图片
+
+预览图片主要依赖于`URL.createObjectURL`这个原生`API`，具体代码如下：
 
 ```js
 function previewImage(img) {
@@ -180,7 +195,9 @@ function previewImage(img) {
 }
 ```
 
-## 下载图片
+### 4.2 下载图片
+
+下载图片主要依赖于`a`标签的`download`属性，具体代码如下：
 
 ```js
 function downloadImage(img) {
@@ -193,3 +210,7 @@ function downloadImage(img) {
   console.log('下载图片成功');
 }
 ```
+
+
+## 五、小结
+本文主要介绍了前端如何实现`复制图片`的功能，核心是通过`Clipboard API`来实现的，如遇到浏览器兼容问题，可以考虑回退使用`document.execCommand()`进行低版本的兼容，另外还介绍了`预览图片`和`下载图片`的实现思路，希望能帮助到大家！
