--- a/src/note/develop/1.image.md
+++ b/src/note/develop/1.image.md
@@ -20,7 +20,7 @@
 
 下面分别介绍下这2个方法：
 
-### 1. document.execCommand()
+### 1.1 document.execCommand()
 使用方法：
 
 先选中文本，然后调用 `document.execCommand('copy')`，即可将选中的文本复制到剪贴板。
@@ -59,7 +59,7 @@ document.execCommand('paste'); // 尝试粘贴
   - 它是同步操作，如果复制内容过多，会引起页面卡顿。
 
 
-### 2. Clipboard API
+### 1.2 Clipboard API
 在浏览器的`BOM`对象中，有一个`API`叫`clipboard`，它提供了**系统剪贴板的读写访问能力**，可以实现`剪切、复制和粘贴功能`，我们可以通过`window`上的`navigator`对象直接访问到一个`clipboard`对象。
 
 ```js
