--- a/src/collect/typescript/1.ts介绍.md
+++ b/src/collect/typescript/1.ts介绍.md
@@ -1,3 +1,17 @@
 ## TypeScript 介绍
 
 ## 为什么要学习 TypeScript
+
+
+## 使用 TypeScript 的原因
+1. 能更早发现代码中的错误
+2. 提高生产力
+3. 支持 `JavaScript` 语言的最新特性，使用了 `JavaScript` 相同的语法和语义
+
+## TypeScript 在线练习
+
+`TypeScript` 在线体验：[https://www.typescriptlang.org/play/](https://www.typescriptlang.org/play/)
+
+可以在网页中编写 `TypeScript` 代码，并提供了常用编译选项，也可以切换 `TypeScript` 版本，并实时查看编译结果。
+
+值得一提的是，在版本列表的头部有一个特殊的版本 `Nightly`，即 `每日构建版`， `TypeScript` 每天会自动从其代码仓库的主分支上拉取最新的代码并构建出一个 `Nightly` 版本，然后分别发布到 `npm` 和 `NuGet`，方便用户尽早地试用新版的软件并提供反馈信息。
