--- a/src/collect/typescript/1.ts介绍.md
+++ b/src/collect/typescript/1.ts介绍.md
@@ -1,8 +1,65 @@
+## JavaScript 的缺陷
+`JavaScript` 是一门动态语言，缺少类型检查，在编写和维护大型项目时比较吃力。
+
 ## TypeScript 介绍
+
+`TypeScript` 是 `JavaScript` 的超集，它在 `JavaScript` 基础上增加了类型系统和其他高级特性。
 
 ## 为什么要学习 TypeScript
 
+## TypeScript的优缺点
+一、 优点：
+1. 静态类型检查
+- 在编译时捕获类型错误，减少运行时错误（如 undefined is not a function）。
+- 通过类型注解（如 let age: number）明确变量类型，提升代码可维护性。
 
+2. 更好的代码提示与智能补全
+- IDE（如 VS Code）能基于类型定义提供精准的自动补全和文档提示，提高开发效率。
+
+3. 增强代码可读性与可维护性
+- 类型注解和接口（interface）充当文档，帮助团队理解代码结构，尤其适合大型项目。
+
+4. 渐进式采用
+- 兼容 JavaScript，允许逐步迁移：可以 .js 文件直接重命名为 .ts，再逐步添加类型。
+
+5. 现代 JavaScript 支持
+- 支持 ES6+ 特性（如模块、解构、异步），并能编译为旧版 JavaScript（通过 tsc 或 Babel）。
+
+6. 高级类型特性
+- 提供泛型、联合类型、交叉类型、类型推断等，灵活建模复杂逻辑。
+
+7. 强大的工具链
+- 与主流框架（React、Vue、Angular）深度集成，提供开箱即用的类型支持。
+  
+二、缺点：
+1. 学习曲线
+- 需要掌握类型系统概念（如泛型、装饰器），对新手可能有一定门槛。
+
+2. 开发初期效率降低
+- 编写类型注解和接口会增加前期时间，尤其在快速迭代的小项目中可能显得繁琐。
+
+3. 编译步骤
+- 需将 TypeScript 编译为 JavaScript 才能运行，增加了构建流程的复杂性。
+
+4. 配置复杂性
+- tsconfig.json 的配置选项较多（如模块解析、严格模式），可能需要调试。
+
+5. 社区库类型支持不完善
+- 部分第三方库缺乏类型定义（@types/package），需手动声明或忽略类型检查。
+
+6. 潜在的过度工程化
+- 小型项目可能因过度设计类型而变得复杂，违背“简单优先”原则。
+
+适用场景：
+- 大型或长期维护的项目：类型系统能显著降低维护成本。
+- 团队协作：类型作为“文档”减少沟通成本。
+- 框架开发：如 React/Angular，利用泛型等高级特性设计健壮 API。
+
+不适用场景：
+- 小型脚本或快速原型开发（可直接用 JavaScript）。
+- 对构建流程极度敏感的项目（如无打包工具的简单页面）。
+
+总结：TypeScript 通过类型安全提升了 JavaScript 的可靠性，但代价是额外的学习和工具链成本。是否采用需权衡项目规模、团队经验及长期维护需求。
 ## 使用 TypeScript 的原因
 1. 能更早发现代码中的错误
 2. 提高生产力
@@ -15,3 +72,28 @@
 可以在网页中编写 `TypeScript` 代码，并提供了常用编译选项，也可以切换 `TypeScript` 版本，并实时查看编译结果。
 
 值得一提的是，在版本列表的头部有一个特殊的版本 `Nightly`，即 `每日构建版`， `TypeScript` 每天会自动从其代码仓库的主分支上拉取最新的代码并构建出一个 `Nightly` 版本，然后分别发布到 `npm` 和 `NuGet`，方便用户尽早地试用新版的软件并提供反馈信息。
+
+`NuGet`是一个免费并且开源的`.NET`包管理器，作为 `Visual Studio` 的扩展并随着 `Visual Studio` 在2012年首次发布，可以方便地管理程序包，包括安装、更新、删除等操作。
+
+## 搭建 TypeScript 开发环境
+
+1. 安装 `TypeScript`
+```bash
+npm install -g typescript
+```
+
+2. 查看版本
+```bash
+tsc -v
+```
+
+3. 编译 `TypeScript` 文件
+```bash
+tsc 1.ts
+```
+
+4. 查看编译结果
+```bash
+cat 1.js
+```
+
