--- a/src/collect/javascript/001.md
+++ b/src/collect/javascript/001.md
@@ -53,3 +53,16 @@ function test() {
 }
 test`name`
 ```
+
+## 区域注释（region注释）
+
+在 `JavaScript` 可以使用区域注释，来定义一个折叠区域。
+
+语法：用`/*#region` 定义折叠开始位置，用 `/*#endregion` 定义折叠结束位置。
+
+```js
+// #region 这里定义了两个a和b两个变量
+let a = 1;
+let b = 2;
+// #endregion
+```
