--- a/src/collect/typescript/1.ts介绍.md
+++ b/src/collect/typescript/1.ts介绍.md
@@ -97,3 +97,11 @@ tsc 1.ts
 cat 1.js
 ```
 
+## TypeScript 的设计原则
+1. 保留 `JavaScript` 代码的运行时行为
+2. 避免增加表达式级别的语法，仅增加类型语法
+3. 与当前和未来版本的ECMAScript规范保持一致
+
+TypeScript 相当于是 JavaScript 的语法糖。
+
+在计算机科学中，语法糖指的是编程语言里的某种语法，这种语法不会影响语言的实际功能，但是会方便开发者的使用，能够让程序更加简洁，增强程序的可读性。
