--- a/src/collect/fund/1.md
+++ b/src/collect/fund/1.md
@@ -8,3 +8,7 @@
 
 ## 投资策略
 1. 大涨不涨停高抛，大跌不跌停敢于低吸
+
+2025年4月份：
+1. 04-16: 指数跌0.7%，个股4000家下跌，1000家上涨，最后半小时国家队出手拉盘，最后指数3276点，涨0.26%。 
+   - 我的操作：沪深300减仓一半。操作依据：指数在3270点附近震荡3天了，横久必跌，这次是因为有国家队护盘
