--- a/src/collect/typescript/类型推论、类型别名.md
+++ b/src/collect/typescript/类型推论、类型别名.md
@@ -37,4 +37,4 @@ type n1 = 1 extends never ? 1 : 0 // 0
 2. Object
 3. Number String 
 4. Boolean number string boolean 
-5. never
+5. null undefined never
