--- a/src/collect/javascript/js-base/006.md
+++ b/src/collect/javascript/js-base/006.md
@@ -100,8 +100,8 @@ JavaScript中有少量文法是上下文相关文法，比如`{ get a {return 1}
   - String + Number（Number隐式转成String）
   - String == Boolean（Boolean先转成Number，再转成String）
 - 复合类型
-  - 结构体。比如对象 { a: T1, b: T2 }
-  - 函数签名。比如 (T1, T2) => T3，参数的数量、类型、类型所处的位置不对，都会造成函数签名的不匹配
+  - 结构体。比如对象 `{ a: T1, b: T2 }`
+  - 函数签名。比如 `(T1, T2) => T3`，参数的数量、类型、类型所处的位置不对，都会造成函数签名的不匹配
 - 子类型
   - 逆变/协变。协变：凡是能用`Array<Parent>`的地方，都能用`Array<Child>`。逆变：凡是能用`Function<Child>`的地方，都能用`Function<Parent>`。
 
