--- a/src/collect/vim/1.vim两种模式、基本移动操作以及复制剪切粘贴.md
+++ b/src/collect/vim/1.vim两种模式、基本移动操作以及复制剪切粘贴.md
@@ -19,6 +19,7 @@ vscode安装插件vim
 下：j
 左：h
 右：l
+下一行的行首: enter
 
 ## 5、行操作
 移动：
@@ -62,7 +63,6 @@ vscode安装插件vim
 - 行前：O
 - 行后：o
 
-直接跳转到指定行：直接输入行号后按 G
 ## 6、复制
 - y：复制文本
 - yy：复制当前行
