--- a/src/collect/vim/2.vim的语法.md
+++ b/src/collect/vim/2.vim的语法.md
@@ -24,6 +24,23 @@ vim的操作由两部分组成：
 - gg：跳到第一行
 - G：跳到最后一行G
 
+## 屏幕的移动
+- ctrl + f: 向上移动一屏
+- ctrl + b: 向下移动一屏
+- ctrl + d: 向上移动半屏
+- ctrl + u: 向下移动半屏
+- ctrl + e: 向上滚动一行
+- ctrl + y: 向下滚动一行
+- zz: 将当前行设置在屏幕中间
+- zt: 将当前行滚动到屏幕顶端
+- zb: 将当前行滚动到屏幕底端 
+
+直接跳转到指定行：
+- 行号 + gg
+- 行号 + G
+- : + 行号 + 回车
+
+扩展：vim +n filename （在打开文件后，跳转到文件的第n行）
 ## 常用组合
 
 cw：删除当前单词并进入insert模式
@@ -67,12 +84,34 @@ u：undo
 Ctrl + r：redo
 
 ## 查找（单行）
+1. 当前行内查找字符
 f{char}: 光标跳到下个{char}所在位置
 F{char}: 反向移动到上个{char}所在位置
 t{char}: 光标跳到下个{char}的前一个字符位置
 T{char}: 反向移动到上个{char}的后一个字符位置
 ;: 重复上次的字符查找操作
 ,: 反向查找上次的查找命令
+
+2. 全文查找（搜索）
+- `/{pattern}<Enter>`: 向下搜索匹配的字符串（支持正则表达式）
+- `?{pattern}<Enter>`: 向上搜索匹配的字符串（支持正则表达式）
+
+跳转匹配结果：
+- n：跳到下一个匹配项。
+- N：跳到上一个匹配项。
+
+3. 基于标记跳转
+- `m{a-z}`: 设置标记（例如 ma 将当前光标位置标记为 a）。
+- ``{a-z}`: 跳转到标记位置（例如 `a 跳转到标记 a）。
+- ``: 返回跳转前的位置。
+
+4. 全文查找当前单词
+- `*`: 向下查找光标下的完整单词(精确匹配)
+- `#`: 向上查找光标下的完整单词(精确匹配)
+- `g*`: 向下查找光标下的完整单词(模糊匹配)
+- `g#`: 向上查找光标下的完整单词(模糊匹配)
+
+> 查找前，光标停在某个单词下即可，不要用光标选中单词
 
 ## 删除/复制 整个文件
 
