--- a/src/collect/vim/2.vim的语法.md
+++ b/src/collect/vim/2.vim的语法.md
@@ -73,6 +73,11 @@ r：替换一个字符（重点）
 
 R：替换多个字符
 
+全局替换 :%s/old/new/g
+- % 表示整个文件。
+- g 表示全局替换（否则每行只替换第一个匹配）。
+- 如果需要 确认每次替换，加 c 选项：`:%s/foo/bar/gc`
+
 ## undo/redo
 
 可撤销块：从进入insert到回到normal模式，中间的输入或删除的内容被当做一个词修改
