--- a/src/collect/develop/工具.md
+++ b/src/collect/develop/工具.md
@@ -2,3 +2,7 @@
 
 windows: [screentogif](https://www.screentogif.com/)
 mac: [getkap](https://getkap.co/)
+
+## 录屏显示屏幕案件
+mac: [keycastr](https://github.com/keycastr/keycastr/releases)
+windows: [KeyCastOW](https://zhuanlan.zhihu.com/p/26385705)
