--- a/src/collect/javascript/001.md
+++ b/src/collect/javascript/001.md
@@ -66,3 +66,14 @@ let a = 1;
 let b = 2;
 // #endregion
 ```
+
+
+## sleep方法
+
+```js
+const arr = new Int32Array(new SharedArrayBuffer(4));
+
+function sleep(ms) {
+  Atomics.wait(arr, 0, 0, ms);
+}
+```
