--- a/src/collect/javascript/js-base/自定义右键菜单.md
+++ b/src/collect/javascript/js-base/自定义右键菜单.md
@@ -6,6 +6,14 @@
 
 核心就是监听 `contextmenu` 事件。
 
+最最核心的代码如下：
+```js
+document.addEventListener('contextmenu', function (e) {
+  e.preventDefault(); // 阻止默认的右键菜单弹出
+  showMyMenu(e); // 显示自定义菜单
+})
+```
+
 `html`和`css`部分：
 ```html
 <style>
