--- a/src/collect/javascript/001.md
+++ b/src/collect/javascript/001.md
@@ -1,13 +1,5 @@
 
-```js
-// 优化前
-const getServerStuff = (callback) => ajaxCall((json) => callback(json))
-
-// 优化后（体现函数是一等公民）
-const getServerStuff = ajaxCall.bind(ajaxCall)
-```
-
-## 正则为什么需要克隆
+## 复制正则
 ```js
 const reg = /js/g
 console.log(reg.test('js')) // true
@@ -27,13 +19,6 @@ function cloneReg(target, isDeep) {
 }
 ```
 
-## 复制Symbol
-```js
-// 关键点
-Symbol() == Symbol()
-function f() {}
-Object.create(f.prototype) == Object.create(f.prototype)
-```
 
 ## class Fields
 类中定义方法时，使用箭头函数，这叫做class Fields
