--- a/src/collect/javascript/js-base/自定义右键菜单.md
+++ b/src/collect/javascript/js-base/自定义右键菜单.md
@@ -14,6 +14,80 @@ document.addEventListener('contextmenu', function (e) {
 })
 ```
 
+## Web Component
+`什么是 Web Component？`
+
+`Web Component`是一项 W3C 制定的原生技术，它允许开发者定义可重用的**自定义HTML元素**。
+
+简单来说，它可以帮我们自定义一个标签，然后可以像使用普通标签一样在HTML中使用它，并且可以给它添加样式和事件。
+
+要使用`Web Component`，分为3布：
+
+1. 在html中定义一个模版
+
+```html
+<template id="user-card-template">
+  <style>
+    .card {
+      border: 1px solid #ddd;
+      padding: 24px;
+      margin: 12px;
+      border-radius: 12px;
+    }
+  </style>
+  <div class="card">
+    <h2><slot name="name">默认名称</slot></h2>
+    <p><slot name="address">默认地址</slot></p>
+  </div>
+</template>
+```
+
+2. 在js中定义自定义元素
+
+```html
+<script>
+class UserCard extends HTMLElement {
+  constructor() {
+    super();
+    
+    // 创建影子DOM
+    const shadow = this.attachShadow({ mode: 'open' });
+    
+    // 获取模板内容
+    const template = document.getElementById('user-card-template');
+    const templateContent = template.content.cloneNode(true);
+    
+    // 将模板添加到影子DOM
+    shadow.appendChild(templateContent);
+  }
+}
+
+// 注册自定义元素
+customElements.define('user-card', UserCard);
+</script>
+```
+
+3. 在html中使用自定义元素
+
+```html
+<user-card>
+  <span slot="name">小张</span>
+  <span slot="address">中国</span>
+</user-card>
+```
+
+`Web Component`有以下优势：
+1. 样式隔离：`Shadow DOM` 可以天然实现样式隔离，相当于`vue`的`scoped`
+2. 跨框架：纯原生js实现，可以与任何框架或纯 JavaScript 一起使用
+3. 无额外依赖：浏览器原生支持的标准，不需要额外库
+
+`Web Component`的缺点：
+1. 浏览器兼容性问题，旧版浏览器兼容差
+2. `Shadow DOM`的样式隔离是把双刃剑，外部样式难以穿透到`Shadow DOM`中，，没有`vue`、`react`的样式隔离方案强大。
+3. 某些搜索引擎爬虫可能无法正确处理 Shadow DOM 中的内容，导致`SEO`变差。
+
+## 配合 Web Component 封装一个跨框架的右键菜单
+
 `html`和`css`部分：
 ```html
 <style>
@@ -103,6 +177,3 @@ document.addEventListener('contextmenu', async function (e) {
 </script>
 ```
 
-## 使用vue封装一个通用型的表单组件
-1. 菜单列表数据传递
-2. 
