--- a/src/collect/develop/工具.md
+++ b/src/collect/develop/工具.md
@@ -6,3 +6,7 @@ mac: [getkap](https://getkap.co/)
 ## 录屏显示屏幕案件
 mac: [keycastr](https://github.com/keycastr/keycastr/releases)
 windows: [KeyCastOW](https://zhuanlan.zhihu.com/p/26385705)
+
+## 屏幕截图、录制
+
+[pixpin](https://pixpin.cn/)
