--- a/src/collect/node/001.md
+++ b/src/collect/node/001.md
@@ -44,3 +44,10 @@ Node：child_process
 
 
 
+
+## Node vs Java
+
+`Java`的特点是静态的、面向对象的语言，优点是稳定性、安全性和跨平台性，缺点是运行速度慢、开发效率低、部署复杂。
+
+`Node`的特点是异步的、事件驱动的、单线程的，优点是高性能、高并发、开发效率高，缺点是稳定性差、不适合CPU密集型应用。
+
