--- a/src/collect/group/如何克服拖延症.md
+++ b/src/collect/group/如何克服拖延症.md
@@ -13,3 +13,7 @@
 
 ### 5分钟起步法
 做一件事情前，给自己设置5分钟的起步时间
+
+
+名言
+1. 人所能控制的范围是有限的，这个世界并不会注意到你处于紧急状态，事情还是会以通常的频率出错。如果提前知道任何事情都会有意外发生，你就站在了一个有利位置，随时准备跨越障碍，而不会被困其中，不会埋怨运气不好，也不会责备自己。
