--- a/src/collect/emotion/恋爱.md
+++ b/src/collect/emotion/恋爱.md
@@ -1,2 +1,57 @@
 - 谈恋爱累不累，取决于那个人是谁，取决于你在这段恋爱里，是不是保留着自己的尊严和底线
 - 爱你的人生怕给你的不够，不爱你的人生怕你要太多
+
+
+- 激素水平的变化
+
+女生哄男生，享受那种哄完然后男朋友焕然开朗的成就感
+男生哄女生，享受那种即便你有情绪，我的话你还能听进去的那种成就感
+
+一段不成熟的恋爱里，两个人更像是在进行一个情绪投资的游戏，我付出多少情绪，我看看能得到多少回报，而真正能走下去的成熟的关系，是我们需要有塑造自己生活的能力，两个人要能规划自己的未来，才能好好走下去，而不是一个总需要“大人”去指引的孩子
+
+情绪是相互包容
+
+
+## 吵架
+我现在有点不高兴，我想说点什么，但是我说出来不代表我想责怪你
+
+事实+感受+请求+鼓励
+
+你这样把袜子乱丢发生过很多次，我就感觉很不舒服，我感觉你没有在用心维护这个家，我希望你能捡回来，以后不要再乱扔了，这样我就会很高兴，我就会觉得你这个人很不错，
+
+用分享感受的方式去发泄自己的情绪，能有效的让对方感性脑中间产生的恐惧感降低大约42%，面部微表情的攻击性也下降58%左右
+
+比如给我起个外号 驼背男
+
+你可能用这种冷暴力的方式，让我记得住
+
+但我这个人不一样，最怕别人对我失望，很容易变成我们两之间的内耗
+
+
+什么事情做好了，要分享给你听，你知道我做了哪些努力吗，揪你过来看，以及今天我什么没做，都要告诉她，一个人要是对你极端苛刻，她就是怕你会忽略，会忘记你的要求
+
+
+恋爱两个人是一个整体，**我们要xx样**，咱们一起去解决这个问题
+
+## 哄
+哄女孩要共情和真正解决问题
+
+口诀：复读机 + 骂人 + 能不能 + 搞定
+- 复读机：当女生有情绪的时候，我们要做个“复读机”
+- 骂人：骂她烦的那个人：那人太sb了吧，上次也那么sb，他怎么一直那么傻逼，他肯定过得不好吧，他肯定家里闹矛盾了吧 -> 离婚啦 -> 该
+- 你说咱去吃个蛋堡能不能开心一点 -> 不行，得吃小龙虾 -> 小龙虾就能开心啦 -> 能   --- 能不能先吃饭，别把咱们身体给搞坏
+- 什么时候换个工作把，上次你的姐姐不是说有个地方招岗位吗，或者过来跟我一起当up主，我们做一个情侣号，气死他们，让他们觉得我们过得非常幸福
+
+男女都一样为什么我要哄女孩啊？怎么不教女生哄男生啊
+- 男女大脑有别，左脑控制的是语言和组织能力，右脑控制的是想象和情绪，一种感性的思维
+- 中间的东西叫胼胝体，男人的胼胝体就是一个像压缩饼干一样，密不透风，能感性理解的我就说不出来话了，说出来的都是**不带感情的机器**，只能组织逻辑，带不了感情在里面
+- 女生的大脑的胼胝体，疏松的，像威化饼干，中间能互通，女生有情绪的时候她能穿过去，用左脑，用语言表达出来，所以女生有情绪能表达出来，男生有情绪憋在里面出不来
+- 所以男女生吵架的时候，男生总是沉默的一方
+- 女生生理周期，激素变化引起情绪波动，波动很大
+
+女生对你有情绪，说明对男生有期待，然后产生落差感
+
+## 这件事怎么去解决
+比如你以前有没有过被欺负的经历，讲给我听一下
+
+要是我当时在，我会xx
