--- a/src/collect/emotion/恋爱.md
+++ b/src/collect/emotion/恋爱.md
@@ -49,7 +49,24 @@
 - 所以男女生吵架的时候，男生总是沉默的一方
 - 女生生理周期，激素变化引起情绪波动，波动很大
 
-女生对你有情绪，说明对男生有期待，然后产生落差感
+女生对你有情绪，说明对男生有期待，然后产生落差感。
+
+【哄】这个事情，本身就是极其耗费心力的，需要强大的内心和理性作为支撑的，并不是说哄就能哄的，你没这个心理素质你也做不到。
+
+假设你是个女孩，有个大学男性同学来你所在的城市出差，说很久没和你见面了，想和你见见面，你觉得这同学以前大学时和你关系还算不错，两人也确实好久没见了，吃个饭也没啥的，那就吃饭吧。但这时候，你男朋友生气了，男朋友觉得这同学肯定不怀好意，都那么久没见了，为啥一定要见你，不准你去。好了，现在你该怎么办？其实遇到这种情况，最好的方式就是【哄】，男朋友其实有点吃醋了，那就哄哄他，说几句情话就好了。比如骂骂这男同学，说他又丑又穷，自己如果不是看在往日情分才不愿意接受他的邀约，然后再夸夸男朋友，说他又帅又温柔，自己哪里舍得放弃他和别的男人乱搞啊。
+
+但你愿意这么做吗？根据我看到过的案例，99%的女性是没办法这么做的。因为，面对男朋友的质疑，你的第一反应肯定是：屈辱、痛苦、愤怒、无语......你会觉得男朋友简直就是无理取闹，根本不信任自己，把自己想象成一个和男人乱搞的女人。面对质疑，你就会本能就会选择解释，你会觉得男朋友误解了自己，自己必须要证明自己的清白，破除男朋友的误解。
+
+你看，这不就变成讲道理了吗？而且，你会在心里面很反感男朋友的做法，进而反感男朋友，你觉得他真是喜欢作、不理解自己、脾气也差，你压根说不出那些夸他的话。你看到他说的那些质疑你的话，你看到他愤怒的表情，还有咄咄逼人的态度，你就恶心了，你哪里还能夸他啊？再说了，那位男同学也没做错啥，你会觉得“我为啥要为了哄男朋友，在背后说那男同学的坏话啊，我说不出口！”
+
+看到了吧？你以为说哄就能哄的吗？哄这个事情，压根就没那么容易。哪怕我告诉你了，面对这种事情你最理性的做法就是哄，但你就是哄不了的——因为人不是机器人，总是会有情绪的。面对伴侣的质疑，你就是会不开心，你就是不舒服，你觉得自己被冤枉了，伴侣这是无理取闹。你会下意识地进行防备，去解释，去辩解说自己压根没错，是伴侣想多了。于是，就变成了“讲道理”。你也没办法说好话去哄伴侣，因为面对伴侣的质疑，你只会觉得伴侣很作、很无理取闹，你看到TA的样子，你就讨厌了，你哪里还能说出什么好听的情话呢？所以我才说，面对愤怒的伴侣，还能去哄的人，是真的神人，起码是内心非常强大，也是非常理性的。普通人的内心并不够强大，所以面对伴侣的质疑时，普通人的第一反应就是防备，去辩解，解释自己并不是坏人，是伴侣理解错了。但那些内心强大的人，面对伴侣的质疑，这类人并不会第一时间想着防备、去辩解，TA们可以敏锐地意识到，伴侣发脾气只是没安全感了，所以自己要去哄伴侣了。无视伴侣对自己的攻击，也不会因为伴侣攻击自己而生气，并且能够越过伴侣的愤怒，看到伴侣的无助内心——你说说，这样的人内心得有多强大啊！
+
+而且，这类人不仅看到伴侣的弱小内心，还要去哄，所谓哄，其实就是睁眼说瞎话，说各种甜言蜜语，别管信不信，有什么好话就先说出来。很多普通人，压根就没这个心力去说谎，是的，说谎是需要心力的。就像上面这个案例，如果你要哄男朋友，你就要去骂那个大学男同学，说他又丑又穷。但普通人是真的没办法这么说。你会觉得，那男同学没做错什么，为啥要这么骂他，这样骂他太没道德了，自己也成了坏人了。但内心强大的人就无所谓，为了哄我的男朋友，我就骂骂男同学吧，反正他又听不到，还是哄我男朋友要紧。所以你看，区别这就出来了吧？
+
+因此，真的别觉得【哄人】很简单，这真不是什么嘴皮子一碰就能轻而易举做到的事情。它真的很难，是真的很难，需要这个哄人的人，有强大的内心，面对冲突的时候并不慌张。大部分人，面对冲突，第一时间就是想躲、就是防备、就是解释，或者觉得自己很冤枉、很痛苦——这种是压根没办法哄人的。其实，说起【哄】这个事情，我最先想到的，就是【哄小孩】。
+
+比如，你的六七岁的小侄女，说你没给她买玩具，生气了，说不理你了。这个时候，你是不会生气的，因为你知道她就是个小孩，你是个大人，你不会因为这样的攻击就有什么心理负担。所以，你是可以很自在地哄这个小朋友，说要给她买玩具，还说最爱的就是她，还夸她好看漂亮啥的。但两个成年人之间，心理水平都差不多的，所以伴侣的攻击，是很容易对另一个人造成心理伤害，特别是另一个人的内心力量没那么强大的时候。那么，被攻击的那个人，就会陷入防备模式，比如会辩解——这就变成了大家所说的【讲道理】。所以我会说，如果你和伴侣争吵的时候，伴侣不会哄你，只会讲道理，那么其实也很正常，因为对方也只是个普通人，并没有足够的心力去哄你，仅此而已，并不是说他不爱你。相反，如果他真的那么厉害，每一次你们争吵的时候，他都能哄你，什么鬼话都说得出来，那你反而要小心了。因为这说明了，他的心理力量非常强大，至少比你高得多，你的那些指责他压根没往心里去，他压根就没破防（就像你也不会因为六七岁的小孩的指责而破防那样）。而且，他可以见人说人话见人说鬼话，压根没啥心理负担，也不会觉得说谎有什么大不了，反正就哄你就完事儿了。一个像大人，另一个像小孩，这样的情侣，心理水平根本不在一个层次，其实也是很危险的一件事。大概就是这样了。
+
 
 ## 这件事怎么去解决
 比如你以前有没有过被欺负的经历，讲给我听一下
@@ -60,3 +77,68 @@
 - 看清自己
 - 获得心灵上的幸福和快乐
 - 一场好的恋爱可以让两个人一起进步
+
+
+## 恋爱细节
+当下发生的很多小事也要立刻解决，不要忽略对方释放出来的微小情绪，有点不高兴立刻问为什么。谈恋爱又不是小说，非要制造点误会波折才有戏剧冲突，现实感情冲突多了又不解决，可不就是关系越来越差吗？哪怕对方说没事，一定要追问，真的没事吗？可是我看你有些不高兴诶，亲爱的，我希望你能告诉我。看着对方，走路的话停下来扶着对方的肩膀——这个时候每个人都需要自己的情感得到重视。你要是说喔，没事就好，那么你也失去了一次在对方心里增加重要性的机会。
+
+恋爱里，你不要看这个男人对你有多好多好，爱会让你看不真切。你要去和他聊天，聊男女平等，聊爱与sex的本质，聊自卑与傲慢，聊痛苦与快乐，聊人生规划和生活理想，聊前任，聊上一段感情里犯的错误，聊教育公开，聊社会，聊原生家庭、聊两个家庭如何沟通与相处，聊谎言的成本和诚实的边界。
+
+激情和肉体的吸引，是亲密关系的起点，但别忘了，精神才是维系一段亲密关系能够长久的核心。如果两个人真心相爱，就一定会想去追求高级享受，达到精神层面的统一（我一直认为不愿意坦诚聊自己就是心里把对方阻挡在外，如果一直进不去对方心里，那么这段关系也就到这儿了）。
+
+## 名言
+- 我不会以爱之名束缚你，你可以做任何你想做的事情。但我只希望你做任何事情之前都可以想起我，并为我拒绝一些人和事，我希望咱俩谈的不只是恋爱，更是信任，是忠诚，是陪伴，是考验，是我们一直不会分开
+- “浅喜似苍狗，深爱如长风。”真正好的爱情是：我们不仅变成了更好的爱人，也变成了更好的自己。愿我们都能遇到一个对的人，变成自己喜欢的样子。
+
+## 长久的恋爱
+第一：获得一段长久恋爱的最好方法，就是不要太重视恋爱这个事情。
+
+进入恋爱后不要一下子热度太高，我心中能够持久的爱情，只有20%的比例是激情，80%的成分都挺理性。理性指的是你有你的事情要忙，我有我的事情要做，彼此支持，和平沟通，用同样的加速度进步。
+
+做起来也很简单：在一起的时候很粘质量很高，分开的时候很彻底。
+
+1、先说说“在一起的时候很粘质量很高”
+
+在一起的时候，充分让双方觉得是在甜蜜地恋爱、充分地沟通，这种“恋爱状态”和平时的生活状态是截然不同的。而不是各看各的手机、各聊各的天，就像让他跟你约会的时候，仿佛一瞬间从紧张的工作状态中解脱出来，进入鲜活、有趣、可爱的恋爱状态，比如“欢乐颂”里曲妖精和赵医生那样，小哥哥会很容易迷恋你
+
+这是女性魅力的重要组成，“他和你在一起的时候，能获得和别人在一起时无法拥有的状态”。
+
+这里的女性魅力，还是那个常用的公式：魅力=诱惑的女人味+天真的孩子气。
+
+2、再来说说“分开的时候很彻底”
+
+大家现在的生活状态，一定是分开的时候更多，这段时间如果可以的话，就彻底分开，用100%的精力，聚焦于把自己的工作和生活经营好。分开的时候，可以把更多的时间聚焦在职场上，分开的时间，你要允许自己成为更好的人，也要允许男朋友利用这段时间打磨自己的竞争力。
+
+“别工作了陪我吧”是小女孩的语言，我们已经长大和成熟了，讨我们开心并不是伴侣的职责。
+
+- 第二：永远不要逆人性地恋爱。
+恋爱是人和人之间的性感小游戏，既然是人，就都有阴暗面，因此“差不多就行了”是很重要的思维。
+
+不用你100%照顾我的情绪，差不多就行了；不用你100%对我诚实，差不多就行了；事情不用100%按照预期的计划来，差不多就行了。
+
+挑战人性是非常危险的。心大一点，感情才能长久哪。顺着人性去恋爱，会获得比你想象中更多的宠爱。
+
+永远不要逆人性地恋爱。我们要试着去接受对方爱自己胜过爱我们、爱自己的家人胜过爱我们的事实，在此基础上去获得爱情。如此顺着人性恋爱，对方会更轻松，我们也会更容易幸福、不容易失望。
+
+如果自认为容易患得患失，占有欲太强，嫉妒心过火，可以这两个办法调节：
+1.坚定相信“我是值得被爱的”。
+
+变美、变性感、让事业更成功……这种自我价值感可以很大程度上消除不自信带来的焦虑感，让你不那么患得患失。
+
+2.试着问自己“他真的有背叛过我吗”。
+
+很多时候，所谓的糟糕情况压根没发生过，全是我们凭空臆想出来的，多给予自己和对方一些信心，猜测妒忌可不会让爱情变得更好。
+
+- 第三：你是谁，就会收获怎样的爱情。
+
+恋爱的任何时候都要以自己的生活为中心，永远用80%的精力去关注自我成长，越来越美，越来越有魅力，越来越光芒四射、越来越快乐（快乐这件事很重要）。这些才是获得欣赏和爱的前提。
+
+听起来很自私，但的确，长久亲密关系靠磨合，更靠“吸引”。彼此保持吸引力、诱惑力，彼此尊重和欣赏的感情是最持久的。
+
+让一段恋爱保鲜的秘诀，就是要持续的把自己源源不断的生命力、活力带入一段爱情。
+
+我觉得以上就是亲密关系能够总结出来的经验啦，剩下都是小技巧啦。比如如何创造新鲜感，如何保持神秘感，事实上当你成为一个鲜活有趣、思想开放的个体，自然会释放很多惊喜。
+
+一般来说，你是谁，就会有怎样的爱情。
+
+所以啊，不管有没有爱情，都要有“单身力”——无论是否单身，都该每天充满魅力、活力，对未来和未知保持开放态度，如黄金单身女郎一样去性感快乐地生活。
