--- a/src/collect/emotion/恋爱.md
+++ b/src/collect/emotion/恋爱.md
@@ -33,6 +33,37 @@
 
 恋爱两个人是一个整体，**我们要xx样**，咱们一起去解决这个问题
 
+
+## 昨天
+
+你也感觉到我昨天生气了，有点不高兴，生气的原因是感觉到你有点爱答不理，也不主动给我发消息，跟前几天就跟换了个人一样，然后就想说点什么，但是我说出来不代表我想责怪你，然后昨天没睡好，上班都没心思，吃饭都没味道，
+
+然后今天想了一下，昨天我们的聊天也不是一文不值，我知道了你心里在想什么了， 把问题抛出来才能去解决。
+
+昨天你说怕耽误我，谈恋爱没有谁耽误谁的，都是相互的，恋爱本来就是一个相互磨合的过程，我们把问题说出来，才能更好的一起往前走。
+
+## 说对我没感觉
+异地见面没给你什么惊喜，跟我见面没什么期待，没规划好行程，问了下身边的朋友，自己做的很不好，这方面我会去改变，我以后每次见面都准备一点小惊喜，然后用心规划我们去哪玩，像端午的时候我也用心准备了，你也能感受得到
+
+我知道你想要的是一个往前走一步的人，在前面为你引路、安排好一切，那种被带领的感觉，我会做到的
+
+## 提要求
+你提出的要求，都是为我好，你自己没有啥好处，我没理由拒绝，更没理由埋怨你，所以我都虚心接受了，我的态度你也是能够感受到的
+
+## 夸她
+你不生气的时候对我很好，像端午的时候陪你买衣服也会想着给我买，去你家吃饭也会给我夹菜，对我很好，这也是我一直坚持下来的原因，你给我的感觉是你一直关心我，爱我
+## 未来规划
+我会尽快结束异地的，后面你生孩子我肯定会来长沙陪你的，不会让你一个人在长沙这边，我到时候开我哥的车子或者我们自己买辆车，我们每天都可以见面，谁不想天天抱着老婆睡觉觉啊
+
+## 平时聊天
+我理解你的工作，平时工作忙，人的精力是有限的，没时间回消息，这个我会理解你，我可能后面换了工作，也会忙起来，就像你堂哥那样，我也会感同身受了，到时候你应该也会理解我
+
+
+昨天你说想要一个成熟的男朋友，
+
+但我该分享还是会分享给你的，会给你发消息，
+
+
 ## 哄
 哄女孩要共情和真正解决问题
 
