--- a/src/collect/develop/工具.md
+++ b/src/collect/develop/工具.md
@@ -10,3 +10,12 @@ windows: [KeyCastOW](https://zhuanlan.zhihu.com/p/26385705)
 ## 屏幕截图、录制
 
 [pixpin](https://pixpin.cn/)
+
+## mac翻转滚动
+目的：实现触控板自然滚动，鼠标非自然滚动
+
+[Scroll Reverser](https://pilotmoon.com/scrollreverser/)
+
+## mac 快捷键
+
+`command + shift + G`: (finder 下)前往任何文件夹，需先打开 finder，再按快捷键
