--- a/src/collect/emotion/恋爱.md
+++ b/src/collect/emotion/恋爱.md
@@ -173,3 +173,39 @@
 一般来说，你是谁，就会有怎样的爱情。
 
 所以啊，不管有没有爱情，都要有“单身力”——无论是否单身，都该每天充满魅力、活力，对未来和未知保持开放态度，如黄金单身女郎一样去性感快乐地生活。
+
+## 情绪价值
+
+我妈做饭，菜烧咸了。 
+
+我爸：“咸了好！咸了下饭！夏天流汗，要补充点盐分！吃咸了还能多喝水，多喝水对身体好！” 
+
+我妈做饭，菜烧淡了。 
+
+我爸：“吃淡点好，健康饮食，吃咸了容易得高血压，现在人都提倡低盐低油的生活。” 
+
+我妈给我爸买的衣服有点小。 
+
+我爸：“我看挺好，贴身，多暖和。” 我妈给我爸买的衣服有点大。 
+
+我爸：“宽松休闲款都这样，而且以后长胖了也能穿。” 
+
+我妈打牌赢了钱，回家后很开心。 
+
+我爸：“真厉害，打牌能赢的都是聪明人，老板今天你赢钱了得请客。” 
+
+我妈打牌输了钱，回家后不开心。 
+
+我爸：“打牌这种事，输赢都正常，你要是总是赢，别人该不和你玩了，偶尔输点没事，只当是让他们了。” 
+
+我爸打扫卫生的时候搞坏了家具。
+
+我妈：“家里打扫得真干净啊，谁家老爷们儿家里家外都这么能干呢，东西坏了……害，旧的不去新的不来，坏得好，我早就想换了。”
+ 
+我爸失业，后来再就业失败。 
+
+我妈：“也挺好，老实说那份工作又危险又辛苦，要真成了，我还得天天担心，还好没成，都辛苦这么多年了，在家歇会儿也行，正好陪陪你姑娘，我和她最近老犯冲，你在家正好，你对姑娘有办法，她就喜欢你。” 
+
+我爸买东西被骗了。 
+
+我妈：“人在河边走，哪有不湿鞋的。要我说你只要记住这个教训，以后再不上当受骗了，这点小钱就花得值。”
