fix: deploy error

--- a/src/collect/vue/vue3/002.md
+++ b/src/collect/vue/vue3/002.md
@@ -66,7 +66,7 @@ setTimeout(() => {
 
 不过当响应式数据多了之后，这样用一个变量去收集依赖的方式就不行了，vue3采用的是下面的结构来收集依赖。
 
-<img :src="$withBase('/vue/vue3/vue3依赖存储结构.png')" alt="图片加载失败">
+![图片加载失败](../../../assets/images/vue/vue3/vue3依赖存储结构.png)
 
 假设数据为{ a: 1, b: 2 }，最外层用`WeakMap`来存储，key为`原生对象target`, value为`map`，`map`的key为`原生对象`的key值，value为一个`Set对象`，里面用来存储与属性相关联的`effect`。
 
