--- a/src/collect/develop/电脑.md
+++ b/src/collect/develop/电脑.md
@@ -1,2 +1,27 @@
 ## 如何激活windows
 [https://github.com/zbezj/HEU_KMS_Activator/releases](https://github.com/zbezj/HEU_KMS_Activator/releases)
+
+
+## windows如何下载、激活 Word、Excel、PowerPoint
+
+1. 下载安装 `Office Tool Plus`
+[Office Tool Plus](https://otp.landian.vip/zh-cn/)
+
+2. 下载软件
+- 选择左侧的部署
+- 部署模式选择【下载】
+- 添加产品：Microsoft 365 应用企业版
+- 语言选择简体中文
+- 点击右上角【开始部署】
+
+3. 生成 ISO 文件
+第二步下载完后，部署模式选择【创建ISO文件】，点击右上角【开始部署】
+
+4. 安装软件
+右键ISO文件，选择【装载】
+
+> 有了ISO文件之后，以后安装软件就不需要 `Office Tool Plus`了。
+
+5. 分别打开一次 Word、Excel、PowerPoint 软件，以确保能激活到
+
+6. 打开激活软件 HEU KMS Activator，选择【智能激活】，点击【开始】
