--- a/src/collect/emotion/一起可以做的有意思的事.md
+++ b/src/collect/emotion/一起可以做的有意思的事.md
@@ -113,5 +113,7 @@
 29.一起去鬼屋，在紧张害怕的时候，可以躲进你的怀里，依赖着你。那一刻你就是我的盖世英雄。
 
 
-
 30.互相给对方一个特有的备注，或许有点可爱有点幼稚，但它绝对只属于你一个。
+
+
+31.疯狂星期四，一起夜跑，蹦迪，200个深蹲，100个引体向上
