--- a/src/collect/interview/project/前端监控.md
+++ b/src/collect/interview/project/前端监控.md
@@ -1,11 +1,11 @@
 ## SDK数据采集与上报核心实现思路
-> 这里只列举了核心指标收集与监控是数据整体流程，后续如果有需要自定义事件和数据采集的，可以借助 MutationObserver 或 Performance API 进行处理。
+> 这里只列举了核心指标收集与监控是数据整体流程，后续如果有需要自定义事件和数据采集的，可以借助 `MutationObserver` 或 `Performance API` 进行处理。
 
 ### 核心模块设计
 1. 网页性能指标采集（FP、FCP、CLS等）：通过 `Web-vitals` 采集这些性能指标。
 2. 异常采集：监控 js 错误，资源加载错误和未捕获的 Promise 错误。
 3. 点击事件采集：捕获用户点击行为，记录交互路径。
-4. 基础星系采集：采集 IP、机型、系统、浏览器等设备以及环境信息。
+4. 基础信息采集：采集 IP、机型、系统、浏览器等设备以及环境信息。
 5. 数据传输协议：统一封装不同类别的数据，发送给后端。
 
 
